Fixed broken layout

--- a/css/_SocialLinks.scss
+++ b/css/_SocialLinks.scss
@@ -2,6 +2,7 @@
 	padding-top: 2em;
 
 	@media screen and (max-width: $narrow) {
+		height: $nav-height / 1.8;
 		padding-top: 1em;
 	}
 
